--- a/source-code/backend/Corcoran/Corcoran.WebApi/packages.config
+++ b/source-code/backend/Corcoran/Corcoran.WebApi/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net461" />
