--- a/source-code/backend/Corcoran/Corcoran.WebApi/Corcoran.WebApi.csproj
+++ b/source-code/backend/Corcoran/Corcoran.WebApi/Corcoran.WebApi.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <Content Include="AppData\Presidents.csv" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\presidents-corcoran - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
